# cmdimg

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  bootstrap_x64_debug.bat  bootstrap_x86_debug.bat  bootstrap_x86_release.bat  conanfile.txt  vcpkg.json  x86_debug_profile.txt
.github/workflows/: c-cpp.yml
ftxuilib/Windows/Win32/Release/: ftxui-component.lib  ftxui-screen.lib
ftxuilib/Windows/x64/Debug/: ftxui-screen.lib
ftxuilib/Windows/x64/Release/: ftxui-component.lib  ftxui-dom.lib  ftxui-screen.lib
libs/ftxuilib/Windows/Win32/Debug/: ftxui-screen.lib
libs/ftxuilib/Windows/Win32/Release/: ftxui-dom.lib
libs/opencv/Windows/Win32/Debug/lib/: opencv_core4d.lib  opencv_imgcodecs4d.lib  opencv_video4d.lib  opencv_videoio4d.lib
libs/opencv/Windows/Win32/Release/lib/: opencv_core4.lib  opencv_imgcodecs4.lib
src/Common/: ArgsParser.cpp  ArgsParser.ixx  Dimentions.hpp  IParser.ixx  IPrinter.ixx  MediaPreviewer.cpp  MediaPreviewer.ixx  NearestNeighboorCompressor.ixx  PrinterParserFactory.ixx  RGB.cpp  TimeManager.hpp  main.cpp
src/GUI/: fxtprinter.cpp  fxtprinter.ixx
src/Image/: ImageParser.cpp  ImageParser.ixx  NearestNeighboorCompressor.cpp  NearestNeighboorCompressor.ixx  RGB.ixx  fxtimageprinter.cpp  fxtimageprinter.ixx
src/Video/: FrameQueue.cpp  FrameQueue.ixx  IFrameBuffer.ixx  VideoParser.cpp  VideoParser.ixx  fpscounter.cpp  fpscounter.ixx  fxtvideoprinter.cpp  fxtvideoprinter.ixx
